jilles      2006/10/22 15:26:26 UTC	(20061022-6877)
  Log:
  Move contrib/cs_count to modules/chanserv/count
  and enable it in example.conf.
  

  Changes:	Modified:
  +0 -1		trunk/contrib/Makefile.in (File Modified) 
  +0 -122	trunk/contrib/cs_count.c (File Deleted) 
  +2 -0		trunk/dist/example.conf (File Modified) 
  +123 -0	trunk/modules/chanserv/Makefile.in (File Modified) 
  + -		trunk/modules/chanserv/count.c (File Added) 


jilles      2006/10/22 15:12:58 UTC	(20061022-6875)
  Log:
  Show /ns release verbosely in /ns help.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/help.c (File Modified) 


jilles      2006/10/22 15:07:53 UTC	(20061022-6873)
  Log:
  Move contrib/ns_enforce to modules/nickserv/enforce.
  

  Changes:	Modified:
  +0 -1		trunk/contrib/Makefile.in (File Modified) 
  +0 -374	trunk/contrib/ns_enforce.c (File Deleted) 
  +2 -0		trunk/dist/example.conf (File Modified) 
  +375 -0	trunk/modules/nickserv/Makefile.in (File Modified) 
  + -		trunk/modules/nickserv/enforce.c (File Added) 


jilles      2006/10/22 15:04:52 UTC	(20061022-6871)
  Log:
  ns_enforce:
  - unbreak compile
  - fix bug where it skipped other users when encountering a service
  

  Changes:	Modified:
  +36 -45	trunk/contrib/ns_enforce.c (File Modified) 


jilles      2006/10/22 14:31:21 UTC	(20061022-6869)
  Log:
  Hopefully fix postgresql IDs in myuser-related tables.
  

  Changes:	Modified:
  +4 -4		trunk/backend/postgresql.c (File Modified) 


jilles      2006/10/22 14:26:16 UTC	(20061022-6867)
  Log:
  Rerun autoconf.
  

  Changes:	Modified:
  +60 -36	trunk/configure (File Modified) 


jilles      2006/10/22 14:24:52 UTC	(20061022-6865)
  Log:
  Revert bogus change to pgsql include directory check.
  

  Changes:	Modified:
  +1 -1		trunk/configure.ac (File Modified) 


jilles      2006/10/22 14:18:56 UTC	(20061022-6863)
  Log:
  Get rid of C++ comment (was an old commented out bit of code).
  

  Changes:	Modified: