@@ -5,7 +5,7 @@
  *
  * Items marked with "(*)" are reconfigurable at runtime via REHASH.
  *
- * $Id: example.conf 6879 2006-10-22 15:37:39Z jilles $
+ * $Id: example.conf 6881 2006-10-22 15:43:33Z jilles $
  */
 
 /* Protocol module.
@@ -801,8 +801,8 @@ general {
 
 	/* (*)cflags
 	 * The default flags to set for channels upon registration.
-	 * Valid values are: hold, secure, verbose, verbose_ops, keeptopic
-	 * and none.
+	 * Valid values are: hold, secure, verbose, verbose_ops, keeptopic,
+	 * topiclock and none.
 	 */
 	cflags = { verbose; };
 
